---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: ????
  Changes:
  Locale:
    - Added localization for German, partial localization for Vietnamese
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 2021-04-04
  Changes:
    - Doubled the Tungsten carbide powder mixture output from 12 to 24 units, of the second tier of tungsten carbide powder mixture recipe, and increased the processing time from 8 to 16 seconds to bring it into line with the first and third tier recipes; also added tier numerals
    - Adjusted item and recipe sorting to correct a few issues with tungsten carbide, copper tungsten and a few miscellaneous items
    - Added an input fluid port on induction furnaces, and moved the recipes for molten copper-tungsten from the chemical furnace to the induction furnace
    - Added high-res versions of copper tungsten and tungsten carbide items, recipes, and technologies, active when using the upcoming release of Angel's mods
  Bugfixes:
    - Fixed that the recipe for zinc powder did not have ingredients; it is now properly crafted from 1 zinc ingot
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2021-03-26
  Bugfixes:
    - Fixed that structures were not returning the correct item when deconstructed
  Locale:
    - Fixed several typos
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2021-03-23
  Features:
    - Added the setting "Legacy inventory sizes" to enable legacy inventory slot counts for warehouses
    - Now dependent on Factorio Library
  Changes:
    - Adjusted the check for Angel's component mode to use the Angel's component mode trigger